--- a/.github/workflows/buildandtest.yml
+++ b/.github/workflows/buildandtest.yml
@@ -29,7 +29,7 @@ jobs:
           scheme: ${{ 'default' }}
           platform: ${{ 'iOS Simulator' }}
         run: |
-          xcodebuild build-for-testing -scheme Workout -destination "platform=iOS,name=Any iOS Device"
+          xcodebuild build-for-testing -scheme Workout -destination "platform=iOS,id=id:dvtdevice-DVTiPhonePlaceholder-iphoneos:placeholder,name=Any iOS Device"
       - name: Test
         env:
           scheme: ${{ 'default' }}
